[package]
name = "ostree-uploader"
version = "0.1.0"
authors = ["Pier Luigi Fiorini <pierluigi.fiorini@liri.io>"]
license = "GPL-3.0-or-later"
edition = "2018"
publish = false

[lib]
name = "ostreereceiver"
path = "src/lib.rs"

[[bin]]
name = "ostree-receive"
path = "src/bin/ostree-receive.rs"

[[bin]]
name = "ostree-upload"
path = "src/bin/ostree-upload.rs"

[dependencies]
clap = "2.33.0"
log = "0.4.0"
env_logger = "0.7.1"
dotenv = "0.10"
indicatif = "0.13.0"
sha2 = "0.8.1"
glib = "0.9.0"
gio = "0.8.0"
ostree = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix = "0.8"
actix-web = "2.0"
actix-rt = "1.0"
actix-multipart = "0.2.0"
failure = "0.1.2"
futures = "0.3.1"
jsonwebtoken = "5"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10.1", features = ["blocking", "json", "gzip"] }
